# environment-awareness

./: .gitignore  CMakeLists.txt
data/: deepin-environment-awareness.service  org.deepin.EnvironmentAwareness.service
debian/: changelog  control  debhelper-build-stamp  deepin-environment-awareness.postinst.debhelper  deepin-environment-awareness.postrm.debhelper  deepin-environment-awareness.substvars  files  install  rules
debian/.debhelper/deepin-environment-awareness/: dbgsym-build-ids
debian/.debhelper/deepin-environment-awareness/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/deepin-environment-awareness/dbgsym-root/usr/share/doc/: deepin-environment-awareness-dbgsym
docs/: benchmark_plan.md
docs/superpowers/specs/: 2026-07-14-environment-awareness-design.md
src/: main.cpp
src/core/: Config.cpp  Config.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  StorageController.cpp  StorageController.h
src/dbus/: ConfigAdaptor.cpp  ConfigAdaptor.h  ContextAdaptor.cpp  ContextAdaptor.h  DBusManager.cpp  DBusManager.h  EventsAdaptor.cpp  EventsAdaptor.h  HistoryAdaptor.cpp  HistoryAdaptor.h  SystemAdaptor.cpp  SystemAdaptor.h
src/sensors/: BrowserSensor.cpp  BrowserSensor.h  ClipboardSensor.cpp  ClipboardSensor.h  FileSensor.cpp  FileSensor.h  ISensor.cpp  ISensor.h  InputSensor.cpp  InputSensor.h  SystemSensor.cpp  SystemSensor.h  WindowSensor.cpp  WindowSensor.h
src/utils/: Logger.cpp  Logger.h  Redactor.cpp  Redactor.h
tests/: test_clipboard_sensor.cpp  test_redactor.cpp  test_sensors.cpp  test_storage.cpp  test_system_sensor.cpp
tests/bench/: .gitignore  bench_queries.py  bench_resource.py  bench_sensors.py  bench_signals.py  gen_actions.py  gen_charts.py  run_all.sh
tests/bench/charts/2026-07-17/: dashboard.html  report.md
tools/dbus-test/: CMakeLists.txt  DBusTestWindow.cpp  DBusTestWindow.h  main.cpp
